code changes make postman work

--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -8,12 +8,10 @@ logging.level.root=info
 logging.level.org.springframework.cloud.gateway=debug
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=info
 
-
-
 # Comment Service
 spring.cloud.gateway.routes[0].id=comment-service
 spring.cloud.gateway.routes[0].uri=lb://comment-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/comment/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/comments/**
 
 # Post Service
 spring.cloud.gateway.routes[1].id=post-service
@@ -23,7 +21,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/post/**
 # User Service
 spring.cloud.gateway.routes[2].id=user-service
 spring.cloud.gateway.routes[2].uri=lb://user-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/user/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/users/**
 
 # Discovery Service
 spring.cloud.gateway.routes[3].id=discovery-service
@@ -39,7 +37,7 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 # Friendship Service
 spring.cloud.gateway.routes[5].id=friendship-service
 spring.cloud.gateway.routes[5].uri=lb://friendship-service
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/friendship/**
+spring.cloud.gateway.routes[5].predicates[0]=Path=/friendships/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/auth/realms/spring-social-realm
 
