--- a/comment-service/src/main/resources/application-docker.properties
+++ b/comment-service/src/main/resources/application-docker.properties
@@ -10,7 +10,7 @@ spring.application.name=comment-service
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 
-user.service.url=http://user-service:8085/api/user
+user.service.url=http://user-service:8085/users
 
 # Spring Actuator
 management.health.circuitbreakers.enabled=true
