--- a/friendship-service/src/main/resources/application-docker.properties
+++ b/friendship-service/src/main/resources/application-docker.properties
@@ -11,7 +11,7 @@ spring.data.mongodb.authentication-database=admin
 
 
 
-user.service.url=http://user-service:8085/api/user
+user.service.url=http://user-service:8085/users
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 # Spring Actuator
