--- a/post-service/src/main/resources/application-docker.properties
+++ b/post-service/src/main/resources/application-docker.properties
@@ -10,8 +10,8 @@ spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
 
-user.service.url=http://user-service:8085/api/user
-comment.service.url=http://comment-service:8086/api/comment
+user.service.url=http://user-service:8085/users
+comment.service.url=http://comment-service:8086/api/comments
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 
 # Spring Actuator
