--- a/user-service/src/main/resources/application-docker.properties
+++ b/user-service/src/main/resources/application-docker.properties
@@ -9,7 +9,7 @@ spring.application.name=user-service
 server.port=8085
 
 
-friendship.service.uri=http://friendship-service:8083/api/friendships
+friendship.service.uri=http://friendship-service:8083/friendships
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 # Spring Actuator
